bump to 1.2.14. Cleaner directory deletion and creation. Update licensing statements. Analyzed code